[package]
name = "include-dir-macro"
version = "0.1.1"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
edition = "2018"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

rocket = { version = "*", optional = true }
tree_magic = { version = "*", optional = true }

[features]
web = ["rocket", "tree_magic"]

[lib]
proc-macro = true

[[example]]
name = "web"
required-features = ["web"]

[[example]]
name = "poems"
