[package]
name = "include-dir-macro"
version = "0.2.0"
edition = "2018"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
description = "Provides a macro to include a directory tree of files in the compiled binary"
repository = "https://github.com/jcdyer/include-dir-macro"
license = "Apache-2.0"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

rocket = { version = "*", optional = true }
tree_magic = { version = "*", optional = true }

[features]
web = ["rocket", "tree_magic"]

[lib]
proc-macro = true

[[example]]
name = "web"
required-features = ["web"]
edition = "2018"

[[example]]
name = "poems"
edition = "2018"
