[package]
name = "include-dir-macro"
version = "0.2.0"
edition = "2018"
authors = ["J. Cliff Dyer <jcd@sdf.org>"]
description = "Provides a macro to include a directory tree of files in the compiled binary"
repository = "https://github.com/jcdyer/include-dir-macro"
license = "Apache-2.0"

[dependencies]
proc-macro2 = "1.0.7"
syn = "1.0.12"
quote = "1.0.2"

rocket = { version = "0.4", optional = true }
tree_magic = { version = "0.2", optional = true }

[features]
web = ["rocket", "tree_magic"]

[lib]
proc-macro = true

[[example]]
name = "web"
required-features = ["web"]
edition = "2018"

[[example]]
name = "poems"
edition = "2018"
